--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -17,4 +17,14 @@
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_slideshow" />
     </group>
+
+    <item android:title="Communicate">
+
+        <menu>
+            <item android:id="@+id/nav_food_list"
+                android:icon="@drawable/ic_menu_camera"
+                android:title="@string/menu_food_list"/>
+        </menu>
+
+    </item>
 </menu>
